refactor: replace StructuredTaskScope with daemonizer